
Alpha 0.24
- Change show ip route to a CISCO intepretation
- Reload ospfd & ripd only when daemon is started
- Implement network <iface> for RIP to use ripd on an interface. passive-interface is used to save configuration, but don't use rip.
- Create command cutString to cut a string when a space, \n or \t occurs. Dynamicly manage the memory
- Create string_mgmt to manage strings (cutting, regexp...)
- Create new function helper for is_valid_ip and is_valid_ip_cidr
- Create new function helper for is_numeric
- stability fixes
- OSPF:
-- Implement router-id A.B.C.D
-- Implement timers spf <delay> <hold>
-- Implement ip ospf hello-interval
-- Implement ip ospf dead-interval
-- Implement ip ospf transmit-delay
-- Implement ip ospf retransmit-interval
-- Implement ip ospf priority

Alpha 0.25
- cleanup for show ip routes
- create helper to detect if an inteface exist
- Implement OSPF Areas
- Implement OSPF authentication
- OSPF is now ready

Alpha 0.26
- Implement sub-ifaces with dot1q vlan tagging
- Crashfix for improbable crash when save ospfd configuration
- Cleanup code for writeRunningConfig
- Bugfix for ifconfig command when ip address is writen with explicit netmask
- Reduce some buffer size
- pkill ospfd & ripd when start daemon
- rewrite loadInterfaces properly with filtering

Alpha 0.27
- 802.1Q interfaces can now be used for OSPF & RIP (and deleted)
- Implement ip helper-address for relay DHCP request to another network
- Implement OSPF stub areas (with no-summary opt)
- Implement OSPF redistribute A.B.C.D/CIDR (+metric & type)
- Rewrite command handler in proper way
- Use BSD Makefiles instead of .am Makefiles (not totally compilable for this time)
- Fix some compile warns
- sysunix buffers are now correctly reinit
- Memory improvement by setting uint8_t instead of unsigned short (uint16_t)
- BSDRouterShell is now fully warn fixed

Alpha 0.28 - prev
- Modify command handling to send char by char, not string by string in prevision of auto completion