@@ -87,3 +87,26 @@ cmdCallback caclCMD_nodeny_acl(char* args)
 
 	return cb;
 }
+
+cmdCallback caclCMD_help(char* _none)
+{
+	cmdCallback cb = {PROMPT_CONF_ACL,""};
+
+	if(strlen(_none) > 0)
+		return cb;
+
+	char buffer[3072];
+	bzero(buffer,3072);
+	uint8_t i;
+	for(i=0;i<MAX_CONF_ACL_CMD;i++)
+	{
+		char buffer2[256];
+		bzero(buffer2,256);
+		sprintf(buffer2,"%s%s\n",confACLCmd[i].name,confACLCmd[i].help);
+		strcat(buffer,buffer2);
+	}
+
+	cb.message = (char*)malloc((strlen(buffer)+1)*sizeof(char));
+	strcpy(cb.message,buffer);
+	return cb;
+}
