@@ -40,4 +40,6 @@ cmdCallback caclCMD_deny_acl(char* args);
 cmdCallback caclCMD_noallow_acl(char* args);
 cmdCallback caclCMD_nodeny_acl(char* args);
 
+cmdCallback caclCMD_help(char* _none);
+
 #endif
