@@ -192,3 +192,26 @@ cmdCallback cfwCMD_show_packetfilter(char* _none)
 	cmdCallback cb = {PROMPT_CONF_FW,""};
 	return cb;
 }
+
+cmdCallback cfwCMD_help(char* _none)
+{
+	cmdCallback cb = {PROMPT_CONF_FW,""};
+
+	if(strlen(_none) > 0)
+		return cb;
+
+	char buffer[3072];
+	bzero(buffer,3072);
+	uint8_t i;
+	for(i=0;i<MAX_CONF_FW_CMD;i++)
+	{
+		char buffer2[256];
+		bzero(buffer2,256);
+		sprintf(buffer2,"%s%s\n",confFWCmd[i].name,confFWCmd[i].help);
+		strcat(buffer,buffer2);
+	}
+
+	cb.message = (char*)malloc((strlen(buffer)+1)*sizeof(char));
+	strcpy(cb.message,buffer);
+	return cb;
+}
