@@ -918,3 +918,29 @@ cmdCallback crouterCMD_OSPF_nostub(char* _none)
 	WRITE_OSPFD();
 	return cb;
 }
+
+cmdCallback crouterCMD_OSPF_help(char* _none)
+{
+	cmdCallback cb = {PROMPT_CONF_ROUTER_OSPF,""};
+
+	if(strlen(_none) > 0)
+		return cb;
+
+	char buffer[3072];
+	bzero(buffer,3072);
+	uint8_t i;
+	for(i=0;i<MAX_CONF_ROUTER_OSPF_CMD;i++)
+	{
+		char buffer2[256];
+		bzero(buffer2,256);
+		if(strlen(confRouterOSPFCmd[i].name) > 10)
+			sprintf(buffer2,"%s%s\n",confRouterOSPFCmd[i].name,confRouterOSPFCmd[i].help);
+		else
+			sprintf(buffer2,"%s%s\n",confRouterOSPFCmd[i].name,confRouterOSPFCmd[i].help);
+		strcat(buffer,buffer2);
+	}
+
+	cb.message = (char*)malloc((strlen(buffer)+1)*sizeof(char));
+	strcpy(cb.message,buffer);
+	return cb;
+}
