@@ -316,3 +316,27 @@ cmdCallback eCMD_save(char* _none)
 	cb.message = CMDEN_SAVE_SUCCESS();
 	return cb;
 }
+
+cmdCallback eCMD_help(char* _none)
+{
+	cmdCallback cb = {PROMPT_ENABLE,""};
+
+	if(strlen(_none) > 0)
+		return cb;
+
+	char buffer[3072];
+	bzero(buffer,3072);
+	uint8_t i;
+	for(i=0;i<MAX_ENABLE_CMD;i++)
+	{
+		char buffer2[256];
+		bzero(buffer2,256);
+		sprintf(buffer2,"%s%s\n",enableCmd[i].name,enableCmd[i].help);
+		strcat(buffer,buffer2);
+	}
+
+	cb.message = (char*)malloc((strlen(buffer)+1)*sizeof(char));
+	strcpy(cb.message,buffer);
+	return cb;
+}
+
