@@ -214,3 +214,4 @@ Alpha 0.27
 
 Alpha 0.28 - prev
 - Modify command handling to send char by char, not string by string in prevision of auto completion
+- Implement help command for all prompts
